--- a/templates/.pyenvrc.j2
+++ b/templates/.pyenvrc.j2
@@ -1,5 +1,5 @@
 # Include this file into your ~/.bashrc
 # -------------------------------------
-export PYENV_ROOT="$HOME/pyenv"
+export PYENV_ROOT="{{ pyenv_path }}"
 export PATH="$PYENV_ROOT/bin:$PATH"
 eval "$(pyenv init -)"
