--- a/templates/.pyenvrc.j2
+++ b/templates/.pyenvrc.j2
@@ -2,4 +2,4 @@
 # -------------------------------------
 export PYENV_ROOT="{{ pyenv_path }}"
 export PATH="$PYENV_ROOT/bin:$PATH"
-eval "$(pyenv init -)"
+eval "$(pyenv init - {{ pyenv_init_options}})"
