--- a/templates/.pyenvrc.j2
+++ b/templates/.pyenvrc.j2
@@ -2,5 +2,6 @@
 # -------------------------------------
 export PYENV_ROOT="{{ pyenv_path }}"
 export PATH="$PYENV_ROOT/bin:$PATH"
+[ -f "{{ pyenvrc_path }}/.pyenvrc.custom" ] && source "{{ pyenvrc_path }}/.pyenvrc.custom"
 eval "$(pyenv init --path)"
-eval "$(pyenv init - {{ pyenv_init_options}})"
+eval "$(pyenv init - {{ pyenv_init_options }})"
